--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "react-widgets": "^4.4.11"
+    "react-widgets": "^4.4.11",
+    "node-sass": "^4.13.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -29,8 +30,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "node-sass": "^4.13.0"
   }
 }
